--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="./twicon/twicon.css">
     <title>旅行社測試</title>
     <!-- LOGO -->
-    <link rel="shortcut icon" href="../imgs/book-2.png">
-    <link rel="bookmark" href="../imgs/book-2.png">
+    <link rel="shortcut icon" href="./imgs/book-2.png">
+    <link rel="bookmark" href="./imgs/book-2.png">
 </head>
 
 <body>
